Fix dark mode on smaller devices. Remove blue bar

--- a/assets/partials/_responsive.scss
+++ b/assets/partials/_responsive.scss
@@ -3,14 +3,14 @@
 	.wrapper { padding: 120px 20px 50px; @include transition(padding .3s ease-in-out);
 		&.active { padding: 30px 20px; }
 	}
-	.user-profile { position: fixed; top: 0; right: -100%; margin: 0; width: 300px; height: 100%; padding: 40px 30px 30px; z-index: 9999; background: $white; box-shadow: 0 0 30px rgba($black, .15);
+	.user-profile { position: fixed; top: 0; right: -100%; margin: 0; width: 300px; height: 100%; padding: 40px 30px 30px; z-index: 9999; background: $grey-color-lightest; box-shadow: 0 0 30px rgba($black, .25);
 		&.active { right: 0; overflow-y: auto;
 			.compact-header { display: block; position: static; top: -100px; width: 100%; padding: 0; box-shadow: none;
 				.avatar { margin: 0 auto 5px; }
 				.my-info { text-align: center; }
 			}
 		}
-		.compact-header { @include flexbox(); @include align-items(); position: fixed; top: 5px; left: 0; width: 100%; padding: 20px; background: $white; box-shadow: 0 2px 10px rgba($black, .1), 0 -5px 0 $primary-color; z-index: 9998;
+		.compact-header { @include flexbox(); @include align-items(); position: fixed; top: 5px; left: 0; width: 100%; padding: 20px; background: $grey-color-lightest; box-shadow: 0 2px 10px rgba($black, .1), 0 -5px 0 $primary-color; z-index: 9998;
 			.avatar { margin: 0 20px 0 0; display: inline-block;
 				img { width: 50px; height: 50px; }
 			}
